--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "awesome-project",
   "dependencies": {
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "moment": "^2.14.1"
   }
 }
